--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -6,22 +5,101 @@
     <meta name="description" content="">
     <meta name="author" content="Carr Simpson">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Carr Simpson - Developer</title>
-    <link rel="stylesheet" href="">
+    <title>Carr Simpson - Developer of Things</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <img src="images/Black_Mage.jpg" alt="Carr's profile picture">
-    <h1>Carr Simpson</h1>
-    <p><em>Salesforce Developer, </em></p>
-    <p>I am a Developer.</p>
+    <table cellspacing="20">
+      <tr>
+        <td><img src="images/Black_Mage.png" alt="Carr's profile picture"></td>
+        <td>    
+          <h1>Carr Simpson</h1>
+          <p><em>Salesforce Senior Developer/Architect working on being Full Stack and dabbling in 3D Modelling and game development</em></p>
+          <p>I am an all around developer, specializing in the Salesforce platform. I &#128153; coffee, code, dogs, and my husband... not necessarily in that order. </p>
+        </td>
+      </tr>
+    </table>
     <hr>
-    <h3>Education</h3>
+    <h3>Certifications</h3>
     <ul>
-      <li>School #1</li>
+      <li><a href="https://flosumbiz.my.salesforce.com/sfc/p/#1a000000YDSU/a/1P000000XwBI/aiKZn01L9LZZDrwfWRQFEvoQ24uYvGWqXFGii3PxTfg">Flosum Certified Professional</a></li>
+      <li><a href="https://www.udemy.com/certificate/UC-ca6ccf6f-758d-40fb-85a5-ecc6c48fbc56/">Get Git Smart Course: Learn Git in Unity, SourceTree, GitHub</a></li>
     </ul>
-    <h3>My Hobbies</h3>
-    <ol>
+    <hr>
+    <h3>Experiences</h3>
+    <table>
+      <thead>
+        <th>Dates</th>
+        <th>Work</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Feb 2022 - Present</td>
+          <td><strong>Salesforce Senior Developer/Architect at Trifecta</strong></td>
+        </tr>
+        <tr>
+          <td>May 2020 - Jan 2022</td>
+          <td><strong>Salesforce Developer at Workrise</strong></td>
+        </tr>
+        <tr>
+          <td>Jan 2020 - Mar 2020</td>
+          <td><strong>Senior Salesforce Developer at Visio Lending</strong></td>
+        </tr>
+        <tr>
+          <td>Apr 2019 - Oct 2019</td>
+          <td><strong>Contractor at Softworld, Inc.</strong></td>
+        </tr>
+        <tr>
+          <td>Aug 2015 - Apr 2019</td>
+          <td><strong>Programmer Analyst at Forcepoint</strong></td>
+        </tr>
+      </tbody>
+    </table>
+    <hr>
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <td>Salesforce Architect</td>
+        <td>⭐⭐⭐⭐⭐</td>          
+      </tr>
+    </table>
+    <hr>
+    <h3>Tools</h3>
+    <table>
+      <tbody>
+        <tr>
+          <td>Windows</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Salesforce</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Flosum</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>SFDX</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Blender</td>
+          <td>⭐⭐⭐⭐⭐</td>         
+        </tr>
+        <tr>
+          <td>Data Loader</td>
+          <td>⭐⭐⭐⭐⭐</td>       
+        </tr>
+      </tbody>
+    </table>
+    <hr>
+    <h3>Projects</h3>
+    <ul>
       <li>3D Modelling</li>
-    </ol>
+    </ul>
+    <hr>
+    <a href="hobbies.html">Hobbies</a>
+    <a href="contact-me.html">Contact Me</a>
   </body>
 </html>	
