--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -20,7 +20,7 @@
       </tr>
     </table>
     <hr>
-    <h3>Certifications</h3>
+    <h3>Qualifications</h3>
     <ul>
       <li><a href="https://flosumbiz.my.salesforce.com/sfc/p/#1a000000YDSU/a/1P000000XwBI/aiKZn01L9LZZDrwfWRQFEvoQ24uYvGWqXFGii3PxTfg">Flosum Certified Professional</a></li>
       <li><a href="https://www.udemy.com/certificate/UC-ca6ccf6f-758d-40fb-85a5-ecc6c48fbc56/">Get Git Smart Course: Learn Git in Unity, SourceTree, GitHub</a></li>
