--- a/Boostrap-installation/index.html
+++ b/Boostrap-installation/index.html
@@ -37,13 +37,13 @@
 				<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 					<ul class="navbar-nav ms-auto">
 						<li class="nav-item">
-							<a class="nav-link" href="">Contact</a>
+							<a class="nav-link" href="#footer">Contact</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="">Pricing</a>
+							<a class="nav-link" href="#pricing">Pricing</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="">Download</a>
+							<a class="nav-link" href="#cta">Download</a>
 						</li>
 					</ul>
 				</div>
@@ -58,7 +58,7 @@
 					<button type="button" class="btn btn-outline-light btn-lg download-button"><i
 							class="fab fa-google-play"></i>Download</button>
 				</div>
-				<div class="col-lg-6">
+				<div class="title-image-container col-lg-6">
 					<img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
 				</div>
 			</div>
@@ -91,12 +91,14 @@
 		<div id="testimonial-carousel" class="carousel slide" data-ride="false">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+					<h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.
+					</h2>
 					<img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
 					<em>Pebbles, New York</em>
 				</div>
 				<div class="carousel-item">
-					<h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their
+					<h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the
+						love of their
 						life. I think.</h2>
 					<img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
 					<em>Beverly, Illinois</em>
@@ -121,53 +123,75 @@
 		<img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 	</section>
 
-
 	<!-- Pricing -->
 	<section id="pricing">
 
 		<h2>A Plan for Every Dog's Needs</h2>
 		<p>Simple and affordable price plans for your and your dog.</p>
 
-
-		<h3>Chihuahua</h3>
-		<h2>Free</h2>
-		<p>5 Matches Per Day</p>
-		<p>10 Messages Per Day</p>
-		<p>Unlimited App Usage</p>
-		<button type="button">Sign Up</button>
-
-
-		<h3>Labrador</h3>
-		<h2>$49 / mo</h2>
-		<p>Unlimited Matches</p>
-		<p>Unlimited Messages</p>
-		<p>Unlimited App Usage</p>
-		<button type="button">Sign Up</button>
-
-
-		<h3>Mastiff</h3>
-		<h2>$99 / mo</h2>
-		<p>Pirority Listing</p>
-		<p>Unlimited Matches</p>
-		<p>Unlimited Messages</p>
-		<p>Unlimited App Usage</p>
-		<button type="button">Sign Up</button>
-
+		<div class="row">
+			<div class="pricing-column col-lg-4 col-md-6">
+				<div class="card">
+					<div class="card-header">
+						<h3>Chihuahua</h3>
+					</div>
+					<div class="card-body">
+						<h2>Free</h2>
+						<p>5 Matches Per Day</p>
+						<p>10 Messages Per Day</p>
+						<p>Unlimited App Usage</p>
+						<button class="btn btn-lg btn-outline-dark col-12" type="button">Sign Up</button>
+					</div>
+				</div>
+			</div>
+			<div class="pricing-column col-lg-4 col-md-6">
+				<div class="card">
+					<div class="card-header">
+						<h3>Labrador</h3>
+					</div>
+					<div class="card-body">
+						<h2>$49 / mo</h2>
+						<p>Unlimited Matches</p>
+						<p>Unlimited Messages</p>
+						<p>Unlimited App Usage</p>
+						<button class="btn btn-lg btn-dark col-12" type="button">Sign Up</button>
+					</div>
+				</div>
+			</div>
+			<div class="pricing-column col-lg-4 col-md-12">
+				<div class="card">
+					<div class="card-header">
+						<h3>Mastiff</h3>
+					</div>
+					<div class="card-body">
+						<h2>$99 / mo</h2>
+						<p>Pirority Listing</p>
+						<p>Unlimited Matches</p>
+						<p>Unlimited Messages</p>
+						<p>Unlimited App Usage</p>
+						<button class="btn btn-lg btn-dark col-12" type="button">Sign Up</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
 	</section>
-
 
 	<!-- Call to Action -->
 	<section id="cta">
 
-		<h3>Find the True Love of Your Dog's Life Today.</h3>
-		<button type="button">Download</button>
-		<button type="button">Download</button>
+		<h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+		<button class="btn btn-lg btn-dark download-button" type="button"><i class="fab fa-apple"></i>Download</button>
+		<button class="btn btn-lg btn-light download-button" type="button"><i class="fab fa-google-play"></i>Download</button>
 
 	</section>
 
-
 	<!-- Footer -->
 	<footer id="footer">
+		<i class="social-icon fab fa-facebook-f"></i>
+		<i class="social-icon fab fa-twitter"></i>
+		<i class="social-icon fab fa-instagram"></i>
+		<i class="social-icon fas fa-envelope"></i>
 
 		<p>© Copyright TinDog</p>
 
